--- a/_sass/minima-classic.scss
+++ b/_sass/minima-classic.scss
@@ -1,12 +1,14 @@
 @charset "utf-8";
 
-$brand-color:           #828282 !default;
-$brand-color-light:     lighten($brand-color, 40%) !default;
+$brand-color:           #fff !default;
+$brand-color-light:     rgba(97, 97, 97, 0.1) !default; // lighten($brand-color, 40%) !default;
 $brand-color-dark:      darken($brand-color, 25%) !default;
 
-$text-color:            #111 !default;
-$background-color:      #fdfdfd !default;
-$code-background-color: #eef !default;
+$title-color:           #DCDCDC !default;
+$text-bright-color:     #fff !default;
+$text-color:            #9aa0a5 !default;
+$background-color:      #111314 !default;
+$code-background-color: rgba(97, 97, 97, 0.1);
 
 $link-base-color:       #2a7ae2 !default;
 $link-visited-color:    darken($link-base-color, 15%) !default;
@@ -22,14 +24,14 @@ $table-border-color:    $brand-color-light !default;
 // ----------------------------------------------------------------------------
 
 .highlight {
-  .c     { color: #998; font-style: italic } // Comment
+  .c     { color: #998 } // Comment
   .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { font-weight: bold } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #998; font-style: italic } // Comment.Multiline
-  .cp    { color: #999; font-weight: bold } // Comment.Preproc
-  .c1    { color: #998; font-style: italic } // Comment.Single
-  .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
+  .k     { } // Keyword
+  .o     { } // Operator
+  .cm    { color: #998 } // Comment.Multiline
+  .cp    { color: #999 } // Comment.Preproc
+  .c1    { color: #998 } // Comment.Single
+  .cs    { color: #999 } // Comment.Special
   .gd    { color: #000; background-color: #fdd } // Generic.Deleted
   .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
   .ge    { font-style: italic } // Generic.Emph
@@ -39,27 +41,27 @@ $table-border-color:    $brand-color-light !default;
   .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
   .go    { color: #888 } // Generic.Output
   .gp    { color: #555 } // Generic.Prompt
-  .gs    { font-weight: bold } // Generic.Strong
+  .gs    { } // Generic.Strong
   .gu    { color: #aaa } // Generic.Subheading
   .gt    { color: #a00 } // Generic.Traceback
-  .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { font-weight: bold } // Keyword.Declaration
-  .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #458; font-weight: bold } // Keyword.Type
+  .kc    { } // Keyword.Constant
+  .kd    { } // Keyword.Declaration
+  .kp    { } // Keyword.Pseudo
+  .kr    { } // Keyword.Reserved
+  .kt    { color: #458 } // Keyword.Type
   .m     { color: #099 } // Literal.Number
   .s     { color: #d14 } // Literal.String
   .na    { color: #008080 } // Name.Attribute
   .nb    { color: #0086B3 } // Name.Builtin
-  .nc    { color: #458; font-weight: bold } // Name.Class
+  .nc    { color: #458 } // Name.Class
   .no    { color: #008080 } // Name.Constant
   .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #900; font-weight: bold } // Name.Function
+  .ne    { color: #900 } // Name.Exception
+  .nf    { color: #900 } // Name.Function
   .nn    { color: #555 } // Name.Namespace
   .nt    { color: #000080 } // Name.Tag
   .nv    { color: #008080 } // Name.Variable
-  .ow    { font-weight: bold } // Operator.Word
+  .ow    { } // Operator.Word
   .w     { color: #bbb } // Text.Whitespace
   .mf    { color: #099 } // Literal.Number.Float
   .mh    { color: #099 } // Literal.Number.Hex
