--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,7 +2,6 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $brand-color-dark;
   border-bottom: 1px solid $brand-color-light;
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
@@ -215,11 +214,11 @@
 .post-meta {
   font-size: $small-font-size;
   color: $brand-color;
+  text-align: center;
 }
 
 .post-link {
   display: block;
-  @include relative-font-size(1.5);
 }
 
 
@@ -228,22 +227,21 @@
  * Posts
  */
 .post-header {
-  margin-bottom: $spacing-unit;
+  margin-top: 2 * $spacing-unit;
+  margin-bottom: 2 * $spacing-unit;
 }
 
 .post-title,
 .post-content h1 {
-  @include relative-font-size(2.625);
-  letter-spacing: -1px;
+  @include relative-font-size(3);
   line-height: 1;
-
-  @media screen and (min-width: $on-large) {
-    @include relative-font-size(2.625);
-  }
+  color: $text-bright-color;
+  font-weight: 300;
+  text-align: center;
 }
 
 .post-content {
-  margin-bottom: $spacing-unit;
+  margin-bottom: 2 * $spacing-unit;
 
   h2 {
     @include relative-font-size(1.75);
@@ -267,6 +265,17 @@
     @media screen and (min-width: $on-large) {
       @include relative-font-size(1.25);
     }
+  }
+
+  img {
+    width: 100%;
+    margin-bottom: $spacing-unit;
+  }
+
+  p:nth-child(2)::first-letter {
+    font-size: 3em;
+    font-weight: 300;
+    color: $text-bright-color;  
   }
 }
 
