--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -26,7 +26,7 @@ $home-width: 1300px !default;
   .title {
     color: $text-bright-color;
     font-size: 3em;
-    font-weight: 300;
+    font-weight: 400;
   }
 
   .masonry {
@@ -37,8 +37,8 @@ $home-width: 1300px !default;
       .title {
         margin-top: 20px;
         margin-bottom: 0px;
-        font-size: 1.2em;
-        font-weight: 300;
+        font-size: 1.3em;
+        font-weight: 400;
         color: $text-bright-color;
       }
 
@@ -46,6 +46,11 @@ $home-width: 1300px !default;
         margin-top: 0px;
         margin-bottom: 0px;
         font-size: 1em;
+      }
+
+      img {
+        width: 100%;
+        min-height: 100px;
       }
     }
   }
@@ -56,15 +61,58 @@ footer {
   .wrapper {
     display: flex;
     justify-content: center;
-    font-size: 0.9em;
+    font-size: 1em;
   }
-  
+
   img.heart {
     width: 14px;
     height: 24px;
     padding-left: 6px;
     padding-right: 6px;
   }
+}
+
+// Custom
+a.text-link {
+  position: relative;
+
+  &::after {
+    content: " ";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 1px;
+    width: 0;
+    margin: auto;
+    background-color: $text-color;
+    transition: all 500ms ease;
+  }
+
+  &:hover {
+    &::after {
+      width: 100%;
+    }
+  }
+}
+
+hr {
+  background-color: $brand-color-light;
+  border: none;
+  height: 1px;
+  margin-bottom: 20px;
+}
+
+.first-large-letter {
+  &::first-letter {
+    font-size: 3em;
+    font-weight: 300;
+    color: $text-bright-color;
+  }
+}
+
+strong, b {
+  font-weight: 600;
 }
 
 // Responsive
