Add TextCapture app article

--- a/_includes/apps.html
+++ b/_includes/apps.html
@@ -17,9 +17,9 @@
       </div>
 
       <div class="app">
-        <a href="javascript:void(0)">
+        <a href="/2020/09/15/textcapture-light-fast-screen-ocr.html">
           <img class="app-icon" src="/assets/img/apps/textcapture.png"/>
-          <h3 class="app-name">TextCapture<br>(Coming soon)</h3>
+          <h3 class="app-name">TextCapture</h3>
         </a>
       </div>
     </div>
