--- a/_includes/me.html
+++ b/_includes/me.html
@@ -7,7 +7,7 @@
     <p class="title">I code and crack!</p>
     <p class="description">
       I'm a mobile, backend, and frontend developer with years of experience.
-      Focus mostly on designing and coding, I always try to create quality products.
+      By focusing on both designing and coding, I always try to create quality products.
       My best skills are:
     </p>
     <div class="languages">
